--- a/.hintrc
+++ b/.hintrc
@@ -14,6 +14,13 @@
       {
         "label": "off"
       }
-    ]
+    ],
+    "axe/keyboard": [
+      "default",
+      {
+        "nested-interactive": "off"
+      }
+    ],
+    "button-type": "off"
   }
 }
