--- a/.hintrc
+++ b/.hintrc
@@ -22,6 +22,7 @@
         "nested-interactive": "off"
       }
     ],
-    "button-type": "off"
+    "button-type": "off",
+    "no-inline-styles": "off"
   }
 }
