--- a/.hintrc
+++ b/.hintrc
@@ -23,6 +23,12 @@
       }
     ],
     "button-type": "off",
-    "no-inline-styles": "off"
+    "no-inline-styles": "off",
+    "axe/structure": [
+      "default",
+      {
+        "list": "off"
+      }
+    ]
   }
 }
